--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_messaging: ^11.4.2
   cloud_firestore: ^3.1.18
   http: ^0.13.4
+  firebase_auth: ^3.3.20
+  google_sign_in: ^5.3.3
   flutter_local_notifications: ^9.6.1
 
 
